--- a/app/src/main/res/layout/ov_taskitem_list_view_itemview_case.xml
+++ b/app/src/main/res/layout/ov_taskitem_list_view_itemview_case.xml
@@ -131,7 +131,7 @@
                 android:textColor="@color/black1" />
             <LinearLayout
                 android:id="@+id/worker_info"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
