--- a/app/src/main/res/layout/fragment_ov_taskitem.xml
+++ b/app/src/main/res/layout/fragment_ov_taskitem.xml
@@ -1,79 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/upper"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/upper"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <include layout="@layout/charts" />
 
-            <include layout="@layout/charts" />
-
-            <include layout="@layout/h_divider" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/edit_task"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="17dp"
-            android:background="@drawable/bg_solid_textview_bg_green"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="16dp"
-            android:text="@string/worker_ov_edit_task_item" />
-
-        <LinearLayout
-            android:id="@+id/workers_list_vg"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="17dp"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
-                android:text="@string/case_overview_worker" />
-
-            <it.sephiroth.android.library.widget.HListView xmlns:widget="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/workers"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginLeft="16.7dp"
-                android:divider="@null"
-                widget:hlv_dividerWidth="10dp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/current_task_items"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="24dp"
-            android:text="@string/detailed_worker_current_task_text"
-            android:textColor="@color/gray2"
-            android:textSize="18dp"
-            android:visibility="gone" />
-
-        <ListView
-            android:id="@+id/tasks"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="17dp"
-            android:divider="@null" />
-
+        <include layout="@layout/h_divider" />
     </LinearLayout>
-</ScrollView>
+
+    <TextView
+        android:id="@+id/edit_task"
+        style="@style/ButtonStyle.Green"
+        android:layout_marginRight="@dimen/edit_task_margin_right"
+        android:layout_marginTop="@dimen/edit_task_margin_top"
+        android:text="@string/worker_ov_edit_task_item"
+        android:layout_gravity="right" />
+
+    <LinearLayout
+        android:id="@+id/workers_list_vg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/workers_list_vg_margin_top"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/case_overview_worker_margin_left"
+            android:text="@string/case_overview_worker" />
+
+        <it.sephiroth.android.library.widget.HListView xmlns:widget="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/workers"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/workers_hlist_height"
+            android:layout_marginLeft="@dimen/workers_hlist_margin_left"
+            android:divider="@null"
+            widget:hlv_dividerWidth="@dimen/workers_hlist_divider_width" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/current_task_items"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/current_task_items_margin_left"
+        android:layout_marginTop="@dimen/current_task_items_margin_top"
+        android:text="@string/detailed_worker_current_task_text"
+        android:textColor="@color/gray2"
+        android:textSize="18dp"
+        android:visibility="gone" />
+
+    <ListView
+        android:id="@+id/tasks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/tasks_listview_margin_top"
+        android:divider="@null" />
+
+</LinearLayout>
