--- a/app/src/main/res/layout/fragment_worker_ov_status.xml
+++ b/app/src/main/res/layout/fragment_worker_ov_status.xml
@@ -7,10 +7,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="24dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:layout_marginBottom="25dp"
+        android:paddingLeft="@dimen/worker_status_ov_top_pane_padding_left"
+        android:paddingRight="@dimen/worker_status_ov_top_pane_padding_right"
+        android:paddingTop="@dimen/worker_status_ov_top_pane_padding_top"
+        android:layout_marginBottom="@dimen/worker_status_ov_top_pane_margin_bottom"
         android:orientation="vertical">
 
         <TextView
@@ -26,9 +26,9 @@
         <EditText
             android:id="@+id/et_record"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="16dp"
-            android:padding="16dp"
+            android:layout_height="@dimen/worker_status_ov_top_pane_et_record_height"
+            android:layout_marginTop="@dimen/worker_status_ov_top_pane_et_record_margin_top"
+            android:padding="@dimen/worker_status_ov_top_pane_et_record_padding"
             android:gravity="top|left"
             android:textSize="16dp"
             android:textColor="@color/gray1"
@@ -36,13 +36,13 @@
             android:background="@drawable/border_textview_bg_gray"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:layout_marginTop="18dp"
+            android:layout_height="@dimen/worker_status_ov_top_pane_buttons_root_height"
+            android:layout_marginTop="@dimen/worker_status_ov_top_pane_buttons_root_margin_top"
             android:gravity="right">
             <LinearLayout
                 android:id="@+id/record"
                 style="@style/ButtonStyle.Blue"
-                android:layout_width="96dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_alignParentRight="true">
@@ -55,16 +55,16 @@
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/capture"
-                android:layout_width="96dp"
+                android:layout_width="@dimen/worker_status_ov_top_pane_button_width"
                 android:layout_height="match_parent"
                 android:background="@drawable/bg_solid_btn_bg_gray"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/record"
-                android:layout_marginRight="17dp">
+                android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_margin_right">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="12dp"
+                    android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_iv_margin_right"
                     android:src="@drawable/take_pic_blk"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -75,16 +75,16 @@
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/upload"
-                android:layout_width="96dp"
+                android:layout_width="@dimen/worker_status_ov_top_pane_button_width"
                 android:layout_height="match_parent"
                 android:background="@drawable/bg_solid_btn_bg_gray"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/capture"
-                android:layout_marginRight="17dp">
+                android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_margin_right">
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="12dp"
+                    android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_iv_margin_right"
                     android:src="@drawable/upload_blk"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -98,11 +98,11 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/upload"
-                android:layout_marginRight="17dp"
+                android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_iv_margin_right"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/score_minus"
-                    android:layout_width="32dp"
+                    android:layout_width="@dimen/worker_status_ov_top_pane_button_score_width"
                     android:layout_height="match_parent"
                     android:textSize="18dp"
                     android:textColor="@color/black1"
@@ -115,11 +115,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="18dp"
                     android:textColor="@color/black1"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"/>
+                    android:layout_marginLeft="@dimen/worker_status_ov_top_pane_button_score_margin_horizontal"
+                    android:layout_marginRight="@dimen/worker_status_ov_top_pane_button_score_margin_horizontal"/>
                 <TextView
                     android:id="@+id/score_plus"
-                    android:layout_width="32dp"
+                    android:layout_width="@dimen/worker_status_ov_top_pane_button_score_width"
                     android:layout_height="match_parent"
                     android:textSize="18dp"
                     android:textColor="@color/black1"
@@ -145,7 +145,7 @@
                 android:layout_height="match_parent"
                 android:visibility="gone"/>
             <LinearLayout
-                android:layout_width="63dp"
+                android:layout_width="@dimen/worker_status_ov_tab_width"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <include
