--- a/app/src/main/res/layout/worker_record.xml
+++ b/app/src/main/res/layout/worker_record.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="30dp">
+    android:paddingTop="@dimen/worker_status_ov_listview_item_padding_top"
+    android:paddingBottom="@dimen/worker_status_ov_listview_item_padding_bottom"
+    android:paddingLeft="@dimen/worker_status_ov_listview_item_padding_left"
+    android:paddingRight="@dimen/worker_status_ov_listview_item_padding_right">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/avatar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/worker_status_ov_listview_item_avatar_size"
+            android:layout_height="@dimen/worker_status_ov_listview_item_avatar_size"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"/>
 
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18dp"
-            android:layout_marginLeft="23dp"
+            android:layout_marginLeft="@dimen/worker_status_ov_listview_item_name_margin_left"
             android:layout_alignTop="@id/avatar"
             android:textColor="@color/black1"
             android:layout_toRightOf="@id/avatar"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
-            android:layout_marginLeft="23dp"
+            android:layout_marginLeft="@dimen/worker_status_ov_listview_item_description_margin_left"
             android:layout_alignBottom="@id/avatar"
             android:textColor="@color/black1"
             android:layout_toRightOf="@id/avatar"
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18dp"
-            android:layout_marginLeft="23dp"
+            android:layout_marginLeft="@dimen/worker_status_ov_listview_item_status_margin_left"
             android:textColor="@color/black1"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/avatar"
@@ -51,9 +51,9 @@
 
         <TextView
             android:id="@+id/download"
-            android:layout_width="68dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="405dp"
+            android:layout_width="@dimen/worker_status_ov_listview_item_download_width"
+            android:layout_height="@dimen/worker_status_ov_listview_item_download_height"
+            android:layout_marginLeft="@dimen/worker_status_ov_listview_item_download_margin_left"
             android:layout_centerVertical="true"
             android:textColor="@android:color/white"
             android:textSize="18dp"
@@ -69,8 +69,8 @@
         android:layout_height="wrap_content"
         android:maxWidth="@dimen/photo_thumbnail_max_width"
         android:maxHeight="@dimen/photo_thumbnail_max_height"
-        android:layout_marginLeft="71dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginLeft="@dimen/worker_status_ov_listview_item_photo_margin_left"
+        android:layout_marginTop="@dimen/worker_status_ov_listview_item_photo_margin_top"
         android:adjustViewBounds="true"
         android:visibility="gone"/>
 
