--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="main_window_background_color">@android:color/white</color>
     <color name="main_window_divider_color">#FFF5F5F5</color>
     <color name="common_block_stroke_color">#FFE1E1E1</color>
+    <color name="no_internet_connection_text_color">@android:color/black</color>
 
     <!-- Views -->
     <color name="button_white_text_color">@android:color/white</color>
