--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
 
+    <dimen name="no_internet_connection_text_size">23dp</dimen>
+    <dimen name="no_internet_connection_retry_button_text_size">20dp</dimen>
+    <dimen name="no_internet_connection_retry_button_margin_top">20dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
