--- a/app/src/main/res/drawable/detailed_worker_task_schedule_item_background.xml
+++ b/app/src/main/res/drawable/detailed_worker_task_schedule_item_background.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <stroke android:width="@dimen/detailed_worker_task_schedule_item_stroke_width" android:color="#FF979797" />
+    <stroke android:width="@dimen/detailed_worker_task_schedule_item_stroke_width" android:color="@color/gray5" />
     <corners android:radius="3dp" />
 
 </shape>
