--- a/app/src/main/res/layout/task_case_header.xml
+++ b/app/src/main/res/layout/task_case_header.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal">
 
     <Spinner
-        android:id="@+id/task_case_spinner"
+        android:id="@+id/case_spinner"
         style="@style/CommonSpinnerStyle"/>
 
     <View
