--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -15,13 +15,31 @@
         android:orientation="horizontal"
         android:visibility="gone">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/task_case_view"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="@integer/task_container_weight"
-            android:scrollbars="vertical"
-            android:background="@drawable/common_block_background"/>
+            android:layout_weight="@integer/case_container_weight"
+            android:orientation="vertical">
+
+            <Spinner
+                android:id="@+id/case_spinner"
+                style="@style/CommonSpinnerStyle"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/assign_task_divider_width_height"
+                android:background="@color/main_window_divider_color" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/task_case_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"
+                android:background="@drawable/common_block_background"/>
+
+        </LinearLayout>
+
+
 
         <View
             android:layout_width="@dimen/assign_task_divider_width_height"
