--- a/app/src/main/res/layout/assign_task_case_information_content.xml
+++ b/app/src/main/res/layout/assign_task_case_information_content.xml
@@ -69,7 +69,7 @@
                     android:text="@string/case_hours_passed_by"/>
 
                 <TextView
-                    android:id="@+id/case_hours_pass_by"
+                    android:id="@+id/case_spent_time"
                     style="@style/TaskCaseTextStyle.TaskCaseInformationTitle"/>
 
                 <TextView
@@ -79,7 +79,7 @@
                     android:text="@string/case_hours_unfinished"/>
 
                 <TextView
-                    android:id="@+id/case_hours_unfinished"
+                    android:id="@+id/case_unfinished_time"
                     style="@style/TaskCaseTextStyle.TaskCaseInformationTitle"/>
 
             </LinearLayout>
