--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="green_button_background_color">#FF5CB85C</color>
     <color name="gray_button_background_color">#FFE1E1E1</color>
     <color name="title_edit_text_text_color">#FF4A4A4A</color>
+    <color name="square_avatar_background_color">#FFCFCFCF</color>
+    <color name="square_avatar_stroke_color">#FF8E8E8E</color>
+    <color name="square_avatar_text_color">#FF48494A</color>
 
     <!-- Common used -->
     <color name="red">#d9534f</color>
