--- a/app/src/main/res/layout/assign_task_case_information_content.xml
+++ b/app/src/main/res/layout/assign_task_case_information_content.xml
@@ -120,6 +120,7 @@
         android:gravity="center"
         android:textSize="@dimen/task_case_edit_button_text_size"
         android:textColor="@color/task_case_edit_button_text_color"
-        android:text="@string/task_case_edit_text"/>
+        android:text="@string/task_case_edit_text"
+        android:visibility="gone"/>
     
 </RelativeLayout>
