--- a/app/src/main/res/layout/worker_card.xml
+++ b/app/src/main/res/layout/worker_card.xml
@@ -60,53 +60,82 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/worker_card_task_content_container"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
-        android:orientation="vertical"
         android:background="@drawable/worker_card_task_content_background">
 
-        <RelativeLayout
-            android:id="@+id/worker_card_current_task_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/worker_card_current_task_container_padding">
-
-            <TextView
-                android:id="@+id/worker_card_wip_task_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:textColor="@color/worker_card_text_black"
-                android:textSize="@dimen/worker_card_content_text_size" />
-
-            <TextView
-                android:id="@+id/worker_card_wip_task_case_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/worker_card_wip_task_name"
-                android:textColor="@color/worker_card_text_gray"
-                android:textSize="@dimen/worker_card_content_text_size"/>
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/worker_card_divider_color"/>
-
-        <TextView
-            android:id="@+id/worker_card_wip_task_working_time"
+        <LinearLayout
+            android:id="@+id/worker_card_status_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
             android:gravity="center"
-            android:textSize="@dimen/worker_card_current_task_working_time_text_size"
-            android:fontFamily="sans-serif-condensed" />
+            android:background="@color/worker_card_status_background_color"
+            android:visibility="gone">
 
-    </LinearLayout>
+            <!-- TODO: White man icon -->
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_person_black"/>
+
+            <TextView
+                android:id="@+id/worker_card_status_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/worker_card_status_text_color"
+                android:textSize="@dimen/worker_card_status_text_size" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/worker_card_wip_task_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/worker_card_current_task_container_padding">
+
+                <TextView
+                    android:id="@+id/worker_card_wip_task_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:textColor="@color/worker_card_text_black"
+                    android:textSize="@dimen/worker_card_content_text_size" />
+
+                <TextView
+                    android:id="@+id/worker_card_wip_task_case_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/worker_card_wip_task_name"
+                    android:textColor="@color/worker_card_text_gray"
+                    android:textSize="@dimen/worker_card_content_text_size"/>
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/worker_card_divider_color"/>
+
+            <TextView
+                android:id="@+id/worker_card_wip_task_working_time"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="@dimen/worker_card_current_task_working_time_text_size"
+                android:fontFamily="sans-serif-condensed" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
