--- a/app/src/main/res/layout/worker_card.xml
+++ b/app/src/main/res/layout/worker_card.xml
@@ -75,11 +75,10 @@
             android:background="@color/worker_card_status_background_color"
             android:visibility="gone">
 
-            <!-- TODO: White man icon -->
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/ic_person_black"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_worker_card_status"/>
 
             <TextView
                 android:id="@+id/worker_card_status_text"
