--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -68,8 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/worker_container_divider"
-                android:paddingLeft="@dimen/worker_container_padding_left_right"
-                android:paddingRight="@dimen/worker_container_padding_left_right"
+                android:padding="@dimen/worker_container_padding_left_right"
                 android:orientation="vertical"
                 android:background="@drawable/common_block_background"
                 android:gravity="center_horizontal">
@@ -79,13 +78,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="39dp"
                     android:layout_gravity="top|left"
-                    android:text="@string/worker_action_start" />
+                    android:text="@string/worker_action_start"
+                    android:visibility="gone"/>
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/worker_pager"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <LinearLayout
                     android:id="@+id/worker_pager_indicator_container"
