--- a/app/src/main/res/layout/fragment_case_ov_right_top_pane.xml
+++ b/app/src/main/res/layout/fragment_case_ov_right_top_pane.xml
@@ -18,7 +18,8 @@
             android:textSize="@dimen/case_ov_right_top_pane_tv_case_text_size"
             android:textStyle="bold"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/case_ov_right_top_pane_tv_case_margin_left"/>
+            android:layout_marginLeft="@dimen/case_ov_right_top_pane_tv_case_margin_left"
+            android:maxWidth="@dimen/case_ov_right_top_pane_tv_case_max_width"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
